--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
         var ind =[]
         var indx ={}
         for (let jk = 0; jk<N; jk++) {
-         //console.log(dats[jk]);
+        console.log(dats[jk]);
          ind.push(jk.toString()+"-"+dats[jk].Individual);
          indx[jk.toString()+"-"+dats[jk].Individual]={
            a :dats[jk]["a-Fused-Sepal-W"],
