--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
         //console.log(ind)
         //console.log(indx)
         gui.add( param, 'Individual', ind).onChange( function(val){
-          //console.log(val);
+          console.log(val);
           sel=1;
           document.getElementById("info").innerHTML=val+" a:"+indx[val].a+" b:"+indx[val].b;
           Rx=indx[val].a/phi;
