--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
          ind.push(jk.toString()+"-"+dats[jk].Individual);
          indx[jk.toString()+"-"+dats[jk].Individual]={
            a :dats[jk]["a-Fused-Sepal-W"],
-           b: dats[jk]["b-Fused-Sepal-L"]
+           b: dats[jk]["b-Free-Sepal-L"]
          }
         }
         //console.log(ind)
